--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "app/Protobuf"]
-	path = app/Protobuf
+[submodule "protobuf"]
+	path = protobuf
 	url = git@github.com:xingobar/todolist-grpc-protocol-buffer.git
