--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Protobuf\\Entity\\": "app/Protobuf/Entity/",
+            "Protobuf\\GPBMetadata\\": "app/Protobuf/GPBMetadata/"
         }
     },
     "autoload-dev": {
