--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "recca0120/repository": "^2.6",
         "spiral/roadrunner-grpc": "^2.0"
     },
     "require-dev": {
@@ -28,8 +29,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "Protobuf\\Entity\\": "app/Protobuf/Entity/",
-            "Protobuf\\GPBMetadata\\": "app/Protobuf/GPBMetadata/"
+            "Protobuf\\": "app/Protobuf/"
         }
     },
     "autoload-dev": {
